# REST_API

./: README.md
api/: client.py  main.py  models.py  pyproject.toml
test/: test_api.py
