[tool.poetry]
name = "\"rest-api-project\""
version = "\"0.1.0\""
description = "\"REST API project on FAST API with product and category-related methods (SQLModel DB connection)\""
authors = ["\"Fomin Artem\""]
license = "\"-\""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "0.115.2"
SQLAlchemy = "2.0.36"
sqlmodel = "0.0.22"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
